Added triangles to the program

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 
 <div id="leftPanelContent">
-	<div id="addSquare" class="button">Add Square</div><br/>
+	<div id="addSquare" class="button">Add Square</div><br/><br/>
+	<div id="addTriangle" class="button">Add Triangle</div><br/>
 	<div id="deleteObject" class="button">Delete Object(s)</div><br/><br/>
 	<div id="clearCanvas" class="button">Clear Canvas</div>
 </div>
